# calmd

./: AGENTS.md  CONTEXT.md  LICENSE  README.md  index.html  package.json  vite.config.ts
docs/: derived-search-index-research.md  implementation-brief.md  internal-links-navigation-research.md  markdown-editor.md  markdown-formatting-research.md  product-brief.md
docs/adr/: 0001-readable-markdown-filenames.md  0002-internal-links-and-navigation.md
docs/in-progress/: derived-search-boundary-cleanup.md  polish-wiki-link-live-preview-navigation.md
src/: App.css  App.tsx  BacklinksPopover.tsx  ComposerScreen.tsx  MarkdownEditor.tsx  NoteEditor.tsx  TitleBar.tsx  index.css  markdownBlockquote.ts  markdownCommands.ts  markdownHighlight.ts  noteEditing.ts  noteNavigation.ts  notes.ts  saveState.ts  storage.ts  threeWayTextMerge.ts  useNoteEditing.ts  wikiLinkNavigation.ts  wikiLinks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  links.rs  note_persistence.rs  note_persistence_tests.rs  search.rs  search_tests.rs  storage.rs  storage_tests.rs
tests/: markdownBlockquote.test.ts  markdownCommands.test.ts  noteEditing.test.ts  noteNavigation.test.ts  notes.test.ts  saveState.test.ts  threeWayTextMerge.test.ts  wikiLinkNavigation.test.ts  wikiLinks.test.ts
