[package]
name = "calmd"
version = "0.0.0"
description = "A calm markdown editor"
authors = ["Suheil"]
license = "MIT"
repository = "https://github.com/suheilOS/calmd"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
atomic-write-file = "0.2"
sha2 = "0.10"
same-file = "1.0"
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
